# NitroShred

./: .gitignore  Cargo.toml  README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: shred-commands.toml
app/src-tauri/src/: lib.rs  main.rs  shred_commands.rs
app/ui/: app.js  index.html  style.css
core/: Cargo.toml
core/src/: bootable_script.rs  hardware_secure_erase.rs  lib.rs  physical_drive_wipe.rs  select_erase_method.rs  trim_ssd_blocks.rs  volume_trim.rs  wipe_free_space.rs  write_zeros_parallel.rs  write_zeros_uring.rs
scripts/: generate-icons.mjs
src/: block_protected_paths.rs  main.rs  select_erase_method.rs  trim_ssd_blocks.rs  write_zeros_direct.rs  write_zeros_parallel.rs  write_zeros_uring.rs
