[package]
name = "nitroshred"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "nitroshred"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap   = { version = "4.0", features = ["derive"] }
rayon  = "1.8"
libc   = "0.2"
rand   = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
