[workspace]
members = ["core", "app/src-tauri"]
resolver = "2"

# ── CLI binary (the original nitroshred command) ─────────────────────────────

[package]
name = "nitroshred"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "nitroshred"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap   = { version = "4.0", features = ["derive"] }
nitroshred-core = { path = "core" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
