[package]
name = "nitroshred-core"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
rayon  = "1.8"
libc   = "0.2"
rand   = "0.8"
serde  = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
