[package]
name = "nitroshred-app"
version = "2.0.0"
edition = "2021"

[lib]
name = "nitroshred_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
nitroshred-core = { path = "../../core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
